--- a/app/src/main/res/layout/activity_materia_test.xml
+++ b/app/src/main/res/layout/activity_materia_test.xml
@@ -1,24 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginBottom="@dimen/activity_margin_recycle"
+    android:layout_marginTop="@dimen/activity_margin_recycle"
+    android:layout_marginLeft="@dimen/activity_margin_recycle"
+    android:layout_marginRight="@dimen/activity_margin_recycle"
     tools:context="edu.fatec.activity.MateriaTestActivity">
 
-
-    <ScrollView
-        android:id="@+id/scrollView"
+    <ExpandableListView
+        android:id="@+id/listaMaterias"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:id="@+id/linearMain"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
-    </ScrollView>
-
-</RelativeLayout>
+</LinearLayout>
