--- a/app/src/main/res/layout/activity_duvida_test.xml
+++ b/app/src/main/res/layout/activity_duvida_test.xml
@@ -4,11 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_margin_recycle"
-    android:paddingLeft="@dimen/activity_margin_recycle"
-    android:paddingRight="@dimen/activity_margin_recycle"
-    android:paddingTop="@dimen/activity_margin_recycle"
     tools:context="edu.fatec.activity.DuvidaTestActivity">
+
+    <LinearLayout
+        android:id="@+id/infoDuvida"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/holo_red_light"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textConteudoDuvida"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Não foi possível conectar com o servidor"
+            android:textColor="@color/textColorPrimary"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cardList"
@@ -16,21 +36,24 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="70dp"
-        android:scrollbars="vertical"/>
+        android:paddingLeft="@dimen/activity_margin_recycle"
+        android:paddingRight="@dimen/activity_margin_recycle"
+        android:paddingTop="@dimen/activity_margin_recycle"
+        android:scrollbars="vertical"
+        android:layout_below="@+id/infoDuvida"/>
 
-    <android.support.design.widget.FloatingActionButton
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/novaDuvida"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_add_white_24dp"
-        android:id="@+id/novaDuvida"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        app:rippleColor="@color/colorPrimaryDark"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_add_white_24dp"
         app:backgroundTint="@color/colorPrimaryDark"
         app:borderWidth="0dp"
         app:elevation="5dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"/>
+        app:rippleColor="@color/colorPrimaryDark" />
 
 </RelativeLayout>
