--- a/app/src/main/res/layout/activity_duvida_test.xml
+++ b/app/src/main/res/layout/activity_duvida_test.xml
@@ -12,21 +12,27 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:background="@android:color/holo_red_light"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:background="@color/colorPrimaryLight"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textConteudoDuvida"
+            android:id="@+id/textInfoDuvida"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Não foi possível conectar com o servidor"
+            android:layout_marginTop="12dp"
+            android:text="Atualizando informações de dúvidas"
             android:textColor="@color/textColorPrimary"
             android:textSize="15sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_margin="10dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:indeterminateTint="@color/textColorPrimary"/>
 
     </LinearLayout>
 
