--- a/app/src/main/res/layout/activity_nova_duvida_test.xml
+++ b/app/src/main/res/layout/activity_nova_duvida_test.xml
@@ -1,84 +1,85 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.fatec.activity.NovaDuvidaTestActivity">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_alignParentTop="true">
 
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/backgroundTituloNovaDuvida"
-            android:minHeight="55dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            card_view:cardCornerRadius="2dp"
-            android:elevation="5dp">
+            android:minHeight="55dp"
+            card_view:cardCornerRadius="2dp">
 
             <EditText
-                android:background="@android:color/transparent"
                 android:id="@+id/tituloNovaDuvida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
+                android:background="@android:color/transparent"
                 android:hint="Titúlo da Dúvida" />
 
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/backgroundConteudoNovaDuvida"
-            android:minHeight="55dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
+            android:minHeight="55dp"
             card_view:cardCornerRadius="2dp"
-            android:elevation="5dp">
+            android:layout_below="@+id/backgroundTituloNovaDuvida">
 
             <EditText
                 android:id="@+id/conteudoNovaDuvida"
-                android:background="@android:color/transparent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
+                android:background="@android:color/transparent"
                 android:hint="Conteúdo da Dúvida" />
 
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/backgroundTagNovaDuvida"
-            android:minHeight="55dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
+            android:minHeight="55dp"
             card_view:cardCornerRadius="2dp"
-            android:elevation="5dp">
+            android:layout_below="@+id/backgroundConteudoNovaDuvida">
 
             <EditText
                 android:id="@+id/tagsNovaDuvida"
-                android:background="@android:color/transparent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
+                android:background="@android:color/transparent"
                 android:hint="Tags da Dúvida" />
 
         </android.support.v7.widget.CardView>
     </LinearLayout>
+
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/inserirNovaDuvida"
@@ -88,7 +89,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:src="@drawable/ic_add_white_24dp"
+        android:src="@drawable/ic_done_white_24dp"
         app:backgroundTint="@color/colorPrimaryDark"
         app:borderWidth="0dp"
         app:elevation="5dp"
