--- a/app/src/main/res/layout/activity_resposta_test.xml
+++ b/app/src/main/res/layout/activity_resposta_test.xml
@@ -37,7 +37,32 @@
         android:paddingLeft="@dimen/activity_margin_recycle"
         android:paddingRight="@dimen/activity_margin_recycle"
         android:paddingTop="@dimen/activity_margin_recycle"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/backgroundResposta"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="80dp"
+        card_view:cardCornerRadius="2dp"
+        android:layout_alignParentBottom="true">
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/resposta"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:hint="Responder esta dúvida"
+            android:minHeight="80dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="80dp"
+            android:layout_alignTop="@+id/novaResposta"
+            android:layout_toLeftOf="@+id/novaResposta"
+            android:layout_toStartOf="@+id/novaResposta" />
+
+    </android.support.v7.widget.CardView>
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/novaResposta"
@@ -52,31 +77,5 @@
         app:borderWidth="0dp"
         app:elevation="5dp"
         app:rippleColor="@color/colorPrimary" />
-
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/backgroundResposta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="55dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        card_view:cardCornerRadius="10dp"
-        android:layout_alignBottom="@+id/novaResposta"
-        android:layout_toLeftOf="@+id/novaResposta"
-        android:layout_toStartOf="@+id/novaResposta">
-
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/resposta"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:hint="Responder esta dúvida"
-            android:minHeight="55dp"/>
-
-    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
