--- a/app/src/main/res/layout/activity_main_test.xml
+++ b/app/src/main/res/layout/activity_main_test.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,24 +35,30 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                android:layout_margin="10dp"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:indeterminateTint="@color/textColorPrimary"/>
-
+                android:layout_margin="10dp"
+                android:indeterminateTint="@color/textColorPrimary" />
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/cardList"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshDuvida"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingBottom="70dp"
-            android:paddingLeft="@dimen/activity_margin_recycle"
-            android:paddingRight="@dimen/activity_margin_recycle"
-            android:paddingTop="@dimen/activity_margin_recycle"
-            android:scrollbars="vertical"
-            android:layout_below="@+id/infoDuvida"/>
+            android:layout_below="@+id/infoDuvida">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycleViewDuvidas"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="70dp"
+                android:paddingLeft="@dimen/activity_margin_recycle"
+                android:paddingRight="@dimen/activity_margin_recycle"
+                android:paddingTop="@dimen/activity_margin_recycle"
+                android:scrollbars="vertical" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/novaDuvida"
@@ -68,15 +73,13 @@
             app:borderWidth="0dp"
             app:elevation="5dp"
             app:rippleColor="@color/colorPrimary" />
-
     </RelativeLayout>
 
-
     <ListView
-        android:id="@+id/navList"
+        android:id="@+id/drawerList"
         android:layout_width="260dp"
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
-        android:background="#ffeeeeee"/>
+        android:background="#ffeeeeee" />
 
 </android.support.v4.widget.DrawerLayout>
