--- a/app/src/main/res/layout/activity_resposta_test.xml
+++ b/app/src/main/res/layout/activity_resposta_test.xml
@@ -5,7 +5,7 @@
     tools:context="edu.fatec.activity.RespostaTestActivity">
 
     <LinearLayout
-        android:id="@+id/conteudoDuvida"
+        android:id="@+id/backgroundDuvidaResposta"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -27,40 +27,47 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/cardList"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshResposta"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/conteudoDuvida"
-        android:clipToPadding="false"
-        android:paddingBottom="70dp"
-        android:paddingLeft="@dimen/activity_margin_recycle"
-        android:paddingRight="@dimen/activity_margin_recycle"
-        android:paddingTop="@dimen/activity_margin_recycle"
-        android:scrollbars="vertical" />
+        android:layout_below="@+id/conteudoDuvida">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/cardList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="70dp"
+            android:paddingLeft="@dimen/activity_margin_recycle"
+            android:paddingRight="@dimen/activity_margin_recycle"
+            android:paddingTop="@dimen/activity_margin_recycle"
+            android:scrollbars="vertical" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/backgroundResposta"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:minHeight="80dp"
-        card_view:cardCornerRadius="2dp"
-        android:layout_alignParentBottom="true">
+        card_view:cardCornerRadius="2dp">
 
         <EditText
+            android:id="@+id/resposta"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/resposta"
+            android:layout_alignTop="@+id/novaResposta"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="80dp"
+            android:layout_toLeftOf="@+id/novaResposta"
+            android:layout_toStartOf="@+id/novaResposta"
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:hint="Responder esta dúvida"
-            android:minHeight="80dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="80dp"
-            android:layout_alignTop="@+id/novaResposta"
-            android:layout_toLeftOf="@+id/novaResposta"
-            android:layout_toStartOf="@+id/novaResposta" />
+            android:minHeight="80dp" />
 
     </android.support.v7.widget.CardView>
 
