--- a/app/src/main/res/layout/activity_materia.xml
+++ b/app/src/main/res/layout/activity_materia.xml
@@ -1,16 +1,43 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_marginBottom="@dimen/activity_margin_recycle"
-    android:layout_marginTop="@dimen/activity_margin_recycle"
-    android:layout_marginLeft="@dimen/activity_margin_recycle"
-    android:layout_marginRight="@dimen/activity_margin_recycle"
     tools:context="edu.fatec.activity.MateriaActivity">
+
+    <LinearLayout
+        android:id="@+id/infoMateria"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal|center_vertical"
+        android:background="@color/colorWarning"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textInfoMateria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="12dp"
+            android:text="Atualizando informações de Materias"
+            android:textColor="@color/textColorPrimary"
+            android:textSize="15sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBarMateria"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="10dp"
+            android:indeterminateTint="@color/textColorPrimary" />
+    </LinearLayout>
 
     <ExpandableListView
         android:id="@+id/listaMaterias"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/infoMateria"/>
 
-</LinearLayout>
+</RelativeLayout>
