--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -72,13 +72,28 @@
                     android:hint="Nome" />
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/sobreNome"
-                android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="20dp"
-                android:hint="Sobrenome" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:visibility="invisible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/ic_account_circle_black_24dp" />
+
+                <EditText
+                    android:id="@+id/sobreNome"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+
+                    android:hint="Sobrenome" />
+            </LinearLayout>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
