--- a/app/src/main/res/layout/activity_duvida_test.xml
+++ b/app/src/main/res/layout/activity_duvida_test.xml
@@ -36,7 +36,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cardList"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="70dp"
