--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,18 +94,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nome do Usuario"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:layout_centerVertical="true"
-                android:paddingLeft="15dp"/>
+                android:layout_marginLeft="15dp"/>
 
             <TextView
                 android:id="@+id/infoEmailUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="usuario@email.com.br"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:layout_below="@id/infoNomeUsuario"
-                android:paddingLeft="15dp" />
+                android:layout_marginLeft="15dp"/>
         </RelativeLayout>
 
         <ListView
