--- a/app/src/main/res/values-v21/colors.xml
+++ b/app/src/main/res/values-v21/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#00838F</color>
     <color name="colorPrimaryDark">#006064</color>
     <color name="colorWarning">#FFA726</color>
+    <color name="colorFail">#ff4444</color>
+    <color name="colorSuccess">#00E676</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColor">#000000</color>
 </resources>
