--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,8 +80,8 @@
         android:id="@+id/backgroundList"
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left|start"
         android:background="#ffeeeeee"
+        android:layout_gravity="left|start"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -106,7 +106,16 @@
                 android:textSize="15sp"
                 android:layout_below="@id/infoNomeUsuario"
                 android:layout_marginLeft="15dp"/>
+
         </RelativeLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/darker_gray" />
 
         <ListView
             android:id="@+id/drawerList"
@@ -116,6 +125,7 @@
             android:divider="@null"
             android:dividerHeight="0dp"
             android:paddingTop="10dp"/>
+
     </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
