--- a/app/src/main/res/values-v21/colors.xml
+++ b/app/src/main/res/values-v21/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorAccentRipple">#E65100</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColor">#000000</color>
+    <color name="inactive">#BDBDBD</color>
 </resources>
