--- a/app/src/main/res/layout/activity_resposta.xml
+++ b/app/src/main/res/layout/activity_resposta.xml
@@ -86,7 +86,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginRight="14dp"
         android:src="@drawable/ic_send_white_24dp"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/inactive"
         app:rippleColor="@color/colorAccentRipple"
         app:borderWidth="0dp"
         app:elevation="5dp"/>
