--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -9,150 +9,80 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <include
             android:id="@+id/toolbar"
             layout="@layout/layout_actionbar" />
 
-        <LinearLayout
-            android:id="@+id/infoNovoUsuario"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="@color/colorWarning"
-            android:gravity="center_horizontal|center_vertical"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/textInfoNovoUsuario"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="12dp"
-                android:text="Seu usuário está sendo criado"
-                android:textColor="@color/textColorPrimary"
-                android:textSize="15sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBarNovoUsuario"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_margin="10dp"
-                android:indeterminateTint="@color/textColorPrimary" />
-        </LinearLayout>
-
-
         <ScrollView
             android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/infoNovoUsuario"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/activity_vertical_margin">
 
-            <LinearLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:id="@+id/iconeContato"
+                android:background="@drawable/ic_account_circle_black_24dp"
+                android:backgroundTint="@color/colorAccentRipple"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/viewEmail"
+                android:textSize="20sp"
+                android:layout_marginBottom="20dp"
+                android:text="email@email.com.br"/>
+
+            <EditText
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:id="@+id/editNome"
+                android:layout_marginBottom="10dp"
+                android:hint="Nome"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editSobreNome"
+                android:layout_marginBottom="10dp"
+                android:hint="Sobrenome"/>
 
-                    <TextView
-                        android:id="@+id/drawContact"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/ic_account_circle_black_24dp" />
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editTelefone"
+                android:hint="+55 11 9999-9999"
+                android:layout_marginBottom="10dp"
+                android:inputType="phone"/>
 
-                    <EditText
-                        android:id="@+id/nome"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Nome" />
-                </LinearLayout>
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editDataNasc"
+                android:hint="00/00/00"
+                android:ems="10"
+                android:focusable="false"
+                android:inputType="none"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+        </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/ic_account_circle_black_24dp"
-                        android:visibility="invisible" />
+    </ScrollView>
 
-                    <EditText
-                        android:id="@+id/sobreNome"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-
-                        android:hint="Sobrenome" />
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/drawPhone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/ic_phone_black_24dp" />
-
-                    <EditText
-                        android:id="@+id/telefone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:ems="10"
-                        android:hint="Telefone"
-                        android:inputType="phone" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/drawDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/ic_insert_invitation_black_24dp" />
-
-                    <EditText
-                        android:id="@+id/dataNasc"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:focusable="false"
-                        android:hint="Data Nascimento"
-                        android:inputType="none" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
 
     </LinearLayout>
+
+
+
 
 </RelativeLayout>
