--- a/app/src/main/res/menu/menu_perfil_usuario.xml
+++ b/app/src/main/res/menu/menu_perfil_usuario.xml
@@ -2,6 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="edu.fatec.activity.PerfilUsuarioActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/alterarSenha"
+        android:orderInCategory="1"
+        android:title="Alterar Senha"
+        app:showAsAction="never" />
+
 </menu>
